--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # Oliver Library System Login Credentials
 OLIVER_USERNAME=your_username_here
 OLIVER_PASSWORD=your_password_here
+
+# Optional: Run browser in headless mode (no visible window)
+# Set to "true" or "1" to enable headless mode
+# HEADLESS=true
+
+# Optional: Enable debug logging
+# Set to "1" to enable verbose debug output
+# DEBUG=1
