--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "oliver-uploader",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "Web automation tool for Oliver library system",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "search": "node index.js",
-    "api": "node index-api.js"
-  },
-  "keywords": [
-    "automation",
-    "oliver",
-    "library"
-  ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "playwright": "^1.40.0",
-    "dotenv": "^16.3.1"
-  }
+	"name": "oliver-uploader",
+	"type": "module",
+	"version": "1.0.0",
+	"description": "Web automation tool for Oliver library system",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"keywords": [
+		"automation",
+		"oliver",
+		"library"
+	],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"playwright": "^1.40.0",
+		"dotenv": "^16.3.1"
+	}
 }
